<resources>
    <string name="app_name">Easy Room</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_building_edit">Building Edit</string>
    <string name="title_activity_renter_dash_board">Renter DashBoard</string>
    <string name="title_activity_owner_dash_board">Owner DashBoard</string>
    <string name="title_activity_building_dash_board">Building DashBoard</string>
    <string name="message_loading">Loading Please Wait</string>
    <string name="message_delete_cancel">Delete Cancel</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_close">CLOSE</string>
    <string name="button_create">CREATE</string>
    <string name="button_delete">DELETE</string>
    <string name="message_delete">Are you sure to Delete?</string>
    <string name="button_edit">EDIT</string>
    <string name="error_empty_input">Please enter data</string>
    <string name="title_activity_room_dash_board">Room DashBoard</string>
    <string name="title_activity_room_edit">Room Edit</string>
    <string name="title_activity_room_type_dash_board">Room Type DashBoard</string>
    <string name="hint_building_name">Building Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_gps">GPS</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_power_rate">Power / Unit</string>
    <string name="hint_power_bill_min">Min Power Bill</string>
    <string name="hint_water_rate">Water / Unit</string>
    <string name="hint_water_bill_min">Min Water Bill</string>
    <string name="button_save">SAVE</string>
    <string name="title_activity_room_type_edit">Room Type Edit</string>
    <string name="hint_room_type">Room Type</string>
    <string name="hint_price_month">Price / Month</string>
    <string name="hint_deposit">Deposit</string>
    <string name="hint_deposit_period_month">Deposit Period (Month)</string>
    <string name="hint_room_id">Room ID</string>
    <string name="title_activity_renter_edit">Renter Edit</string>
    <string name="hint_id_card">ID Card</string>
    <string name="title_activity_option_dash_board">Option DashBoard</string>
    <string name="title_activity_option_edit">Option Edit</string>
    <string name="hint_contract_id">Contract ID</string>
    <string name="hint_name_renter">Renter Name</string>
    <string name="hint_contract">Contract</string>
    <string name="hint_renter_status">Renter Status</string>
</resources>
